Bug 368698 - Can't explore plasmoids with a touch screen
Summary: Can't explore plasmoids with a touch screen
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Widget Explorer sidebar (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-12 14:54 UTC by Aleix Pol
Modified: 2017-06-29 08:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
aleixpol: Usability+
aleixpol: VisualDesign+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aleix Pol 2016-09-12 14:54:57 UTC
if I scroll over it, plasmoids are selected to be dragged onto the desktop, making it quite hard to go through the list.

Reproducible: Always
Comment 1 Kai Uwe Broulik 2016-09-13 08:24:05 UTC
That's a general problem with drag area and touch. I did experiment with DragArea initiating drag only on press-and-hold in case of a touch event. Might be worth looking into that again.
Comment 2 Thomas Pfeiffer 2016-09-13 11:29:02 UTC
The problem with "drag only on press-and-hold" is that it makes the widget explorer's main purpose - to add widgets to the desktop or panel via drag and drop - more cumbersome.

Drag on hold is nice for cases where dragging is only a secondary usecase (best example being mobile device home screens), whereas here it's the primary one.

That said, Plasma Desktop is not focused on touch usage, so having a sub-optimal experience with touch is acceptable. We just have to make sure we don't carry that UI over 1:1 to Plasma Mobile.
Comment 3 Kai Uwe Broulik 2016-09-13 14:33:15 UTC
I said "That's a general problem with drag area and *touch*", behavior for when using a mouse wouldn't change. Qt can tell when it's an actual mouse click or a finger tap.
Comment 4 Thomas Pfeiffer 2016-09-16 13:33:53 UTC
(In reply to Kai Uwe Broulik from comment #3)
> I said "That's a general problem with drag area and *touch*", behavior for
> when using a mouse wouldn't change. Qt can tell when it's an actual mouse
> click or a finger tap.

I know, and my reply was based on that knowledge. Press-and-hold is just not a nice interaction, neither with touch nor with a mouse.
But as I said, I think this is acceptable in a desktop environment which is not optimized for touch in general.
Comment 5 David Edmundson 2017-06-29 08:48:22 UTC
Git commit 86bbebdee213f08ae615d7459304cbd17f6b7d7d by David Edmundson.
Committed on 21/06/2017 at 11:40.
Pushed by davidedmundson into branch 'master'.

Start drag with press and hold on touch events

Summary:
This patch consists of two changes:
- starting drags on press and hold
- not starting drags when the event is from a touch event

This means a user can scroll on a widget explorer with a touch screen
correctly without it immediately starting a drag, but can still drag an
item using a press and hold pattern.

Test Plan:
Scrolled in Widget Explorer
Added widget with press and hold

Surprisingly that's the only Plasma usage of DragArea.

Reviewers: #plasma, mart

Reviewed By: #plasma, mart

Subscribers: mart, hein, broulik, plasma-devel, #frameworks

Tags: #plasma, #frameworks

Differential Revision: https://phabricator.kde.org/D4972

M  +37   -1    src/qmlcontrols/draganddrop/DeclarativeDragArea.cpp
M  +2    -0    src/qmlcontrols/draganddrop/DeclarativeDragArea.h

https://commits.kde.org/kdeclarative/86bbebdee213f08ae615d7459304cbd17f6b7d7d